flickrXBMC Changelog

Current Version : 0.9.3

** 0.9.3 ***

Added strings to language files
Add more (probably bad) spanish translations
Fixed issue with map thumbnail cache

** 0.9.2 ***

German language translation - thanks to Max Auer
Spanish language translation
Maps for Place thumbnails
Added 'Show Map' option on photo context menu to display a map with marker

** 0.9.1 ***

Bug fix: Was incorrectly adding the cache dir

** 0.9.0 ***

Initial Release