@@ -5,6 +5,15 @@
     <string id="30002">Default Thumb Size</string>
     <string id="30003">Default Display Size</string>
     <string id="30004">Maximum Number Of Photos Per Page</string>
+    <string id="30005">Default Map Source</string>
+    <string id="30006">Country Zoom</string>
+    <string id="30007">Region Zoom</string>
+    <string id="30008">Locality Zoom</string>
+    <string id="30009">Neighborhood Zoom</string>
+    <string id="30010">Photo Zoom</string>
+    <string id="30011">Enable Maps Thumbnails</string>
+    <string id="30012">Default Map Type</string>
+    
     
     <!-- Image Sizes-->
     <string id="30100">Square</string>
@@ -17,6 +26,7 @@
     
     <!-- Settings Categories-->
     <string id="30200">Display</string>
+    <string id="30201">Maps</string>
     
     <!-- 'Your' Categories-->
     <string id="30300">Photostream</string>
@@ -49,5 +59,4 @@
     <string id="30514">@NAMEREPLACE@'s @REPLACE@</string><!--(Singular possesive) example: John's Photostream -->
     <string id="30515">@NAMEREPLACE@'s @REPLACE@</string><!--(Plural posessive) example: John's Sets -->
     <string id="30516">Search @NAMEREPLACE@'s Photostream</string><!--Search John's Photostream -->
-    
 </strings>
