@@ -9,5 +9,14 @@
     <setting id="default_thumb_size" type="enum" label="30002" lvalues="30100|30101|30102|30103|30104|30105|30106" default="1" />
     <setting id="default_display_size" type="enum" label="30003" lvalues="30100|30101|30102|30103|30104|30105|30106" default="5" />
   </category>
-  
+  <category label="30201">
+    <setting id="enable_maps" type="bool" label="30011" default="true" />
+    <setting id="default_map_source" type="enum" label="30005" values="Google|Yahoo|Open Street Map" default="1" />
+    <setting id="default_map_type" type="enum" label="30012" values="Hybrid|Satellite|Terrain|Roadmap" default="0" />
+    <setting id="country_zoom" type="enum" label="30006" values="0|1|2|3|4|5|6|7|8|9|10|11|12|13|14|15|16|17|18|19|20|21" default="2" />
+    <setting id="region_zoom" type="enum" label="30007" values="0|1|2|3|4|5|6|7|8|9|10|11|12|13|14|15|16|17|18|19|20|21" default="4" />
+    <setting id="locality_zoom" type="enum" label="30008" values="0|1|2|3|4|5|6|7|8|9|10|11|12|13|14|15|16|17|18|19|20|21" default="9" />
+    <setting id="neighborhood_zoom" type="enum" label="30009" values="0|1|2|3|4|5|6|7|8|9|10|11|12|13|14|15|16|17|18|19|20|21" default="13" />
+    <setting id="photo_zoom" type="enum" label="30010" values="0|1|2|3|4|5|6|7|8|9|10|11|12|13|14|15|16|17|18|19|20|21" default="15" />
+  </category>
 </settings>
