@@ -7,6 +7,10 @@ Current Version : 0.9.3
 Added strings to language files
 Add more (probably bad) spanish translations
 Fixed issue with map thumbnail cache
+Added options for alternate map sources (yahoo, open street map)
+Added settings for map zooms
+Added ability to disable map thumbnails
+Moved map funtions into a class
 
 ** 0.9.2 ***
 
